--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title><%= htmlWebpackPlugin.options.title %></title>
-  <script src="<%= BASE_URL %>./static/ac_api.min.js"></script>
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  <!-- <script src="<%= BASE_URL %>./static/ac.min.js"></script> -->
   <script src="<%= BASE_URL %>./static/ac_conf.js"></script>
-  <script src="<%= BASE_URL %>./static/ac_int_test.js"></script>
+  <!-- <script src="<%= BASE_URL %>./static/ac_int_test.js"></script> -->
 </head>
 
 <body>
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-      Please enable it to continue.</strong>
+        Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
