--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
-  <!-- <script src="<%= BASE_URL %>./static/ac.min.js"></script> -->
-  <script src="<%= BASE_URL %>./static/ac_conf.js"></script>
+  <script src="./static/ac_api.min.js"></script>
+  <script src="./static/ac_conf.js"></script>
+  <script src="./static/ac.min.js"></script>
   <!-- <script src="<%= BASE_URL %>./static/ac_int_test.js"></script> -->
 </head>
 
